--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,5 +1,5 @@
 :root {
-  --mainBrown: rgb(102, 65, 65);
+  --mainBrown: rgb(58, 50, 50);
   --mainYellow: rgb(235, 151, 16);
   --mainGray: gray;
   --mainwhite: white;
@@ -30,4 +30,31 @@ h6 {
   cursor: pointer;
   color: var(--mainYellow);
   font-size: 2rem;
+}
+.default-background,
+.about-background {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(rgba(235, 151, 16, 0.5), rgba(235, 151, 16, 0.5));
+  background-position: center;
+  background-size: cover;
+  opacity: 1 !important;
+}
+
+.about-background {
+  min-height: 60vh;
+}
+
+.btn-yellow {
+  color: var(--mainYellow);
+  border-color: var(--mainYellow);
+}
+.btn-yellow:hover {
+  background: var(--mainYellow);
+  color: var(--mainBrown) !important;
+}
+.footer {
+  background: var(--mainBrown);
 }
